dist/1.0/bin/sample/retrieveUnpackaged/objects/Contract_Agreement_Tariff__c.object
<CustomObject>
    <fields>
        <fullName>Contract_Agreement__c</fullName>
        <label>Contract Agreement</label>
        <referenceTo>Contract_Agreement__c</referenceTo>
        <relationshipLabel>Fees and Tariffs</relationshipLabel>
        <relationshipName>Contract_Agreement_Tariffs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Incoming_Tariff__c</fullName>
        <description>Payments for incoming calls to the Supplementary Telephone Service Numbers</description>
        <inlineHelpText>Payments for incoming calls to the Supplementary Telephone Service Numbers</inlineHelpText>
        <label>Incoming Tariff</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Order_Line__c</fullName>
        <label>Order Line</label>
        <referenceTo>OrderLine__c</referenceTo>
        <relationshipLabel>Contract Agreement Tariffs</relationshipLabel>
        <relationshipName>Contract_Agreement_Tariffs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Outgoing_Tariff__c</fullName>
        <description>The sum depending on the amount of all Call-fees for all Calls effected during the Period determined on the basis of the Tariff applicable at time of provision of the Service</description>
        <inlineHelpText>The sum depending on the amount of all Call-fees for all Calls effected during the Period determined on the basis of the Tariff applicable at time of provision of the Service</inlineHelpText>
        <label>Outgoing Tariff</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Service_Activation_Fee__c</fullName>
        <label>Service Activation Fee</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Service_Monthly_Charge__c</fullName>
        <label>Service Monthly Charge</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Telephone_Configuration_Label__c</fullName>
        <description>Configuration of telephone/ATA/PBX</description>
        <inlineHelpText>Configuration of telephone/ATA/PBX</inlineHelpText>
        <label>Telephone Configuration Label</label>
        <referenceTo>PricingItem__c</referenceTo>
        <relationshipLabel>Contract Agreement Tariffs (Telephone Configuration Label)</relationshipLabel>
        <relationshipName>Contract_Agreement_Tariffs5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Telephone_Configuration__c</fullName>
        <label>Telephone Configuration</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Telephone_Fee_Label__c</fullName>
        <description>The lump-sum fee for telephone/ATA/PBX</description>
        <inlineHelpText>The lump-sum fee for telephone/ATA/PBX</inlineHelpText>
        <label>Telephone Fee Label</label>
        <referenceTo>PricingItem__c</referenceTo>
        <relationshipLabel>Contract Agreement Tariffs (Telephone Fee Label)</relationshipLabel>
        <relationshipName>Contract_Agreement_Tariffs1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Telephone_Fee__c</fullName>
        <label>Telephone Fee</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Telephone_Installment_Sale_Label__c</fullName>
        <description>Installment sale of telephone/ATA/PBX</description>
        <inlineHelpText>Installment sale of telephone/ATA/PBX</inlineHelpText>
        <label>Telephone Installment Sale Label</label>
        <referenceTo>PricingItem__c</referenceTo>
        <relationshipLabel>Contract Agreement Tariffs (Telephone Installment Sale)</relationshipLabel>
        <relationshipName>Contract_Agreement_Tariffs3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Telephone_Installment_Sale__c</fullName>
        <label>Telephone Installment Sale</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Telephone_Rental_Fee_Label__c</fullName>
        <description>Monthly rental fee for telephone/ATA/PBX</description>
        <inlineHelpText>Monthly rental fee for telephone/ATA/PBX</inlineHelpText>
        <label>Telephone Rental Fee Label</label>
        <referenceTo>PricingItem__c</referenceTo>
        <relationshipLabel>Contract Agreement Tariffs (Telephone Rental Fee Label)</relationshipLabel>
        <relationshipName>Contract_Agreement_Tariffs4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Telephone_Rental_Fee__c</fullName>
        <label>Telephone Rental Fee</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Contract Agreement Tariff</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contract Agreement Tariffs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>